# agent-client-protocol

./: CHANGELOG.md  Cargo.toml  MAINTAINERS.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release-plz.yml  sync-registry.yml
docs/: docs.json  publications.mdx  updates.mdx
docs/get-started/: clients.mdx  registry.mdx
docs/libraries/: rust.mdx
docs/protocol/: initialization.mdx
docs/rfds/: additional-directories.mdx
scripts/: generate_registry_docs.py  spellcheck.mjs
src/: agent.rs  client.rs  content.rs  elicitation.rs  error.rs  ext.rs  lib.rs  maybe_undefined.rs  plan.rs  protocol_level.rs  rpc.rs  tool_call.rs
